[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "assetpy"
version = "0.1.0"
description = "EAM Network Graph Application — Enterprise Asset Management hierarchy modeled as a NetworkX directed graph"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
    "plotly>=5.18",
]

[project.scripts]
assetpy = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
